# sub_projects_install_example

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/applicationLayer/: CMakeLists.txt
src/applicationLayer/lib_a/: CMakeLists.txt
src/applicationLayer/lib_a/include/: lib_a.hpp
src/applicationLayer/lib_b/: CMakeLists.txt  lib_b.cpp
src/applicationLayer/lib_b/include/: lib_b.hpp
src/buisnesLayer/: CMakeLists.txt  main.cpp
src/buisnesLayer/lib_c/: CMakeLists.txt  lib_c.cpp
src/buisnesLayer/lib_c/include/: lib_c.hpp
src/buisnesLayer/lib_d/: CMakeLists.txt  lib_d.cpp
src/buisnesLayer/lib_d/include/: lib_d.hpp
